feat: Update project dependencies and configuration
Upgrades project dependencies to newer versions, including React, Vite, and associated TypeScript types and plugins. Adjusts Vite configuration for improved build and development server setup. Updates `tsconfig.json` and `index.html` for compatibility and project branding. Removes unused Gemini AI dependency.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Criptodamus</title>
+    <title>Criptodamus | AI Market Prophet</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;700&display=swap" rel="stylesheet">
     <script>
@@ -20,7 +20,7 @@
               border: '#27272a',     // Zinc 800
               primary: '#e4e4e7',    // Zinc 200
               secondary: '#a1a1aa',  // Zinc 400
-              accent: '#8b5cf6',     // Violet 500 (Mystical for Criptodamus)
+              accent: '#8b5cf6',     // Violet 500
               accentHover: '#7c3aed',
               success: '#10b981',    // Emerald 500
               danger: '#ef4444',     // Red 500
@@ -51,19 +51,21 @@
         background: #3f3f46; 
       }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0"
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
+    "vite": "https://aistudiocdn.com/vite@^7.2.4",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
